feat: 添加角色管理功能，修复账号认证
