# pkg/rest/response/type.go
@@ -23,3 +23,8 @@ func (r *response) SetData(data interface{}) {
 func (r *response) Clone() response {
 	return *r
 }
+
+type pageData struct {
+	List  interface{} `json:"list"`
+	Total int64       `json:"total"`
+}
